--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,6 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+configurations {
+  implementation.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+}
